# ostool

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.json  README.md  test-build.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.github/workflows/actions/setup-qemu/: action.yml
fitimage/: Cargo.toml
fitimage/examples/: basic_usage.rs  compression_test.rs  full_fit_test.rs  header_test.rs  txt_test.rs
fitimage/src/: crc.rs  error.rs  hash.rs  lib.rs
fitimage/src/compression/: gzip.rs  traits.rs
fitimage/src/fit/: builder.rs  config.rs  dt_builder.rs  fdt_header.rs  fdt_tokens.rs  mod.rs  standard_dt_builder.rs  string_table.rs
fitimage/tests/: test.rs  test_compatibility_formats.rs  test_fixed_config.rs
jkconfig/: Cargo.toml
jkconfig/src/: lib.rs  log.rs  main.rs  run.rs
jkconfig/src/data/: app_data.rs  item.rs  menu.rs  mod.rs  oneof.rs  schema.rs  types.rs
jkconfig/src/ui/: mod.rs
jkconfig/src/ui/components/: icon.rs  menu.rs  mod.rs  refresh.rs
jkconfig/src/ui/components/editors/: array_editor.rs  boolean_editor.rs  depend_features_editor.rs  depend_select_editor.rs  enum_editor.rs  feature_select.rs  integer_editor.rs  mod.rs  multi_select_editor.rs  number_editor.rs  oneof_editor.rs  string_editor.rs
jkconfig/tests/: schema-obj.rs  schema.rs
mkimage/: Cargo.toml  README.md
mkimage/examples/: basic_usage.rs
mkimage/src/: builder.rs  cli.rs  crc.rs  error.rs  image_header.rs  image_types.rs  lib.rs  main.rs
mkimage/src/compression/: gzip.rs  mod.rs  traits.rs
mkimage/src/fit/: builder.rs  mod.rs  serializer.rs  types.rs
mkimage/tests/: cli_tests.rs  integration_tests.rs
ostool/: Cargo.toml  README.md
ostool/examples/: test_fit_integration.rs
ostool/src/: ctx.rs  env.rs  lib.rs  main.rs  menuconfig.rs  project.rs  shell.rs  ui.rs  utils.rs
ostool/src/cmd/: defconfig.rs  mod.rs
ostool/src/config/: compile.rs  loader.rs  mod.rs  qemu.rs
ostool/src/config/compile/: cargo.rs  custom.rs  mod.rs
ostool/src/os/: arceos.rs  mod.rs  sparreal.rs
ostool/src/run/: cargo.rs  mod.rs  qemu.rs  tftp.rs  uboot.rs
ostool/src/run/ovmf_prebuilt/: fetch.rs
ostool/src/step/: compile.rs  mod.rs  prepare_test.rs  qemu.rs  test_prepare.rs
ostool/src/step/uboot/: mod.rs  tests.rs
ostool/src/sterm/: mod.rs
ostool/tests/: cli_tests.rs  config_loader_tests.rs  integration_tests.rs  mod.rs  project_tests.rs  step_tests.rs
src/: compile.rs  env.rs  main.rs  project.rs  qemu.rs  shell.rs  test.rs  uboot.rs  ui.rs
src/config/: compile.rs  mod.rs  qemu.rs
src/os/: arceos.rs  mod.rs  sparreal.rs
src/step/: compile.rs  mod.rs  prepare_test.rs  qemu.rs  tftp.rs  uboot.rs
uboot-shell/: Cargo.toml
uboot-shell/examples/: loady.rs  loady_real.rs
uboot-shell/src/: crc.rs  lib.rs  ymodem.rs
uboot-shell/tests/: test.rs
