[package]
name = "ostool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
clap = { version = "4", features = ["derive"] }
byte-unit = "5.1"
serialport = "4.5"
network-interface = "2.0.0"
tftpd = "0.3"
serde_json = "1.0"
