[package]
name = "ostool"
version = "0.1.0"
edition = "2021"
description = "A tool for operating system development"
authors = ["周睿 <zrufo747@outlook.com>"]
license = "MIT OR Apache-2.0"
categories = ["os", "embedded", "cli", "os-dev"]
repository = "https://github.com/ZR233/ostool"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
clap = { version = "4", features = ["derive"] }
byte-unit = "5.1"
serialport = "4.6"
network-interface = "2.0.0"
tftpd = "0.3"
serde_json = "1.0"
