[package]
name = "ostool"
version = "0.6.2"
edition = "2021"
description = "A tool for operating system development"
authors = ["周睿 <zrufo747@outlook.com>"]
license = "MIT OR Apache-2.0"
categories = ["os", "embedded", "development-tools", "config"]
repository = "https://github.com/ZR233/ostool"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "3"
clap = { version = "4", features = ["derive"] }
byte-unit = "5.1"
serialport = "4.6"
network-interface = "2.0.0"
tftpd = "0.3.2"
serde_json = "1.0"
object = "0.36.5"
cargo_metadata = "0.19.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
