[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["command-line-interface", "config"]
description = "A Cursive-based TUI component library for JSON Schema configuration"
edition = "2024"
keywords = ["tui", "config", "json-schema", "terminal", "cursive"]
license = "MIT OR Apache-2.0"
name = "jkconfig"
repository = "https://github.com/ZR233/ostool"
version = "0.1.0"

[dependencies]
# Cursive TUI framework
cursive = {version = "0.21", features = ["crossterm-backend"]}

# Data processing
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

toml = "0.9"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

[dev-dependencies]
schemars = {version = "1.0.4", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
tokio-test = "0.4"
toml = "0.9"
