[package]
name = "mkimage"
version = "0.1.0"
edition = "2021"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "A Rust implementation of U-Boot's mkimage tool for creating bootable images"
license = "MIT OR Apache-2.0"
categories = ["embedded", "development-tools", "os"]
keywords = ["u-boot", "boot", "image", "embedded"]
repository = "https://github.com/ZR233/ostool"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crc = "3.0"
byteorder = "1.4"
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"
# 新增 FIT 和压缩支持依赖
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
hex = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "mkimage"
path = "src/main.rs"