[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["os", "embedded", "development-tools", "config"]
description = "A tool for operating system development"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ostool"
readme = "../README.md"
repository = "https://github.com/ZR233/ostool"
version = "0.7.29"

[dependencies]
anyhow = {workspace = true, features = ["backtrace"]}
byte-unit = "5.1"
cargo_metadata = "0.23"
clap = {workspace = true, features = ["derive"]}
colored = "3"
crossterm = "0.29"
env_logger = {workspace = true}
indicatif = "0.18"
log = {workspace = true}
network-interface = "2"
object = "0.37"
ratatui = "0.29"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serialport = "4.6"
tftpd = "0.5"
toml = {workspace = true}
uboot-shell = {version = "0.1.9", path = "../uboot-shell"}
tokio = {workspace = true, features = ["full"]}
schemars = {workspace = true, features = ["derive"]}
jkconfig = {version = "0.1", path = "../jkconfig"}